--- a/Exercise-4.ipynb
+++ b/Exercise-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a5b5902-2f3e-4107-80ce-89d34e46a621",
+   "id": "02d50f23",
    "metadata": {},
    "source": [
     "# Exercise 4\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1579371-479f-491a-9c6d-dca103750755",
+   "id": "fe98ece1",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c985fe5a-13f3-4f3f-843b-0b20609920e4",
+   "id": "7e8a94b4",
    "metadata": {},
    "source": [
     "## Helper functions\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fd1374e-dcc1-447d-ac98-0efe2eb01786",
+   "id": "c9fd1464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9db10c4-b9a5-4205-8e03-43cb7e2f1ec1",
+   "id": "e765616c",
    "metadata": {},
    "source": [
     "## Problem 1 - Data exploration (3 points) \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "523e6237-3bdf-42d3-b758-cea18a98a5bc",
+   "id": "804a3d9b",
    "metadata": {},
    "source": [
     "### Task 1.1 - Read the data, explore the `xarray.Dataset` object \n",
@@ -186,15 +186,18 @@
     "  \n",
     "- Explore the `data` and find out (using programming) what is:\n",
     "  - the **maximum** `\"elevation\"` value in the data?\n",
+    "      - Answer: 2294\n",
     "  - the **minimum** elevation value in the data?\n",
+    "      - Answer: 1342\n",
     "  - the **mean** elevation in the data?\n",
+    "      - Answer: 1663\n",
     "  - Hint: You can find these in a similar manner as in pandas/geopandas. **Notice** that by default, the xarray always returns values as an array (even if the result is a scalar value, such as number 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c305dbc2-d9fd-433b-938f-6f85c2ccf8c9",
+   "execution_count": 63,
+   "id": "9aa5521a",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -209,7 +212,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.Dataset>\n",
+      "Dimensions:    ()\n",
+      "Data variables:\n",
+      "    elevation  uint16 2294\n",
+      "<xarray.Dataset>\n",
+      "Dimensions:    ()\n",
+      "Data variables:\n",
+      "    elevation  uint16 1342\n",
+      "<xarray.Dataset>\n",
+      "Dimensions:    ()\n",
+      "Data variables:\n",
+      "    elevation  float64 1.663e+03\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_128/2251843010.py:10: DeprecationWarning: open_rasterio is Deprecated in favor of rioxarray. For information about transitioning, see: https://corteva.github.io/rioxarray/stable/getting_started/getting_started.html\n",
+      "  data = xr.open_rasterio(fp).squeeze(\"band\", drop=True).to_dataset(name=\"elevation\")\n"
+     ]
+    }
+   ],
    "source": [
     "import xarray as xr\n",
     "import xrspatial as xs\n",
@@ -223,12 +253,20 @@
     "data = xr.open_rasterio(fp).squeeze(\"band\", drop=True).to_dataset(name=\"elevation\")\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# Explore the data and find out (using programming) what is:\n",
+    "# the maximum \"elevation\" value in the data?\n",
+    "print(data.max())\n",
+    "\n",
+    "# the minimum elevation value in the data?\n",
+    "print(data.min())\n",
+    "\n",
+    "# the mean elevation in the data?\n",
+    "print(data.mean())\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6ef5cf53-ec58-49cf-83aa-536592fe8d3b",
+   "id": "43211795",
    "metadata": {},
    "source": [
     "### Task 1.2 - Visualize the data\n",
@@ -250,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0a1cc5-4611-4620-b94b-78b69b0ebc7f",
+   "id": "0167f752",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -273,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95312109-b3a5-46e7-8f8e-732d5d797e2f",
+   "id": "c8afc8a2",
    "metadata": {},
    "source": [
     "## Problem 2 - Calculate Slope and Aspect + visualize (6 points)\n",
@@ -293,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf2b76e-5516-4afb-b3b7-0c253d1b6f02",
+   "id": "b8788b55",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -316,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a88eec-e5ef-4d3c-9a82-daf3d2dee3a7",
+   "id": "a407fb77",
    "metadata": {},
    "source": [
     "### Task 2.2 - Aspect\n",
@@ -337,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63fdfdb2-451c-4b5b-99b5-f8c7eeec021f",
+   "id": "363a6923",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -360,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec2d79d-f7fa-4574-adf9-d1231a2b6365",
+   "id": "1b954ca4",
    "metadata": {},
    "source": [
     "## Problem 3 - Reclassify and weight the values (6 points)\n",
@@ -386,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b842a61-dcd5-4a63-b434-e82976c7ba38",
+   "id": "ab7c4abf",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -415,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86df380e-4643-4590-8307-fcdf3c310a5b",
+   "id": "5ed6c21f",
    "metadata": {},
    "source": [
     "### Step 3.2 - Classify the slope using Natural Breaks + modify the values with own criteria\n",
@@ -440,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32784649-de5d-4cfe-b658-ff786fb4d6d2",
+   "id": "674125d3",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -482,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "789cb6f4-3c66-47e1-934a-c318c489161b",
+   "id": "a3e516ee",
    "metadata": {},
    "source": [
     "### Step 3.3 - Classify the aspect to custom classes using `reclassify`\n",
@@ -500,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a164e6ae-6aa9-4db1-8c27-8befc8f1f924",
+   "id": "fbd21888",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -536,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d20ffb0c-969e-4880-b231-ff70e2c3ef18",
+   "id": "c61523be",
    "metadata": {},
    "source": [
     "## Problem 3 - Local map algebra (2 points)\n",
@@ -561,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "386d985e-3513-4ec0-8a29-672f0db1dd2f",
+   "id": "d7063eba",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -584,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9934a504-0a0d-4fd8-a11e-8b011159fb72",
+   "id": "b589787a",
    "metadata": {},
    "source": [
     "## Problem 4 - Smooth the surface with focal map algebra (2 points)\n",
@@ -608,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70736ea9-c7b2-45ce-9719-3c9d7670f0ea",
+   "id": "f92a0941",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -643,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2bd439-d89b-4161-9517-dad0d4db3a0c",
+   "id": "135c332d",
    "metadata": {},
    "source": [
     "## Problem 5 - How long did it take? Optional feedback (1 point)\n",
