--- a/Exercise-4.ipynb
+++ b/Exercise-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02d50f23",
+   "id": "c882fe9e",
    "metadata": {},
    "source": [
     "# Exercise 4\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe98ece1",
+   "id": "1ccfc26b",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8a94b4",
+   "id": "15c0583c",
    "metadata": {},
    "source": [
     "## Helper functions\n",
@@ -63,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c9fd1464",
+   "execution_count": 65,
+   "id": "8cd2199f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e765616c",
+   "id": "b43d3cc4",
    "metadata": {},
    "source": [
     "## Problem 1 - Data exploration (3 points) \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "804a3d9b",
+   "id": "4262c8cb",
    "metadata": {},
    "source": [
     "### Task 1.1 - Read the data, explore the `xarray.Dataset` object \n",
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "9aa5521a",
+   "execution_count": 66,
+   "id": "1d1fa8d7",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_128/2251843010.py:10: DeprecationWarning: open_rasterio is Deprecated in favor of rioxarray. For information about transitioning, see: https://corteva.github.io/rioxarray/stable/getting_started/getting_started.html\n",
+      "/tmp/ipykernel_128/3157749704.py:10: DeprecationWarning: open_rasterio is Deprecated in favor of rioxarray. For information about transitioning, see: https://corteva.github.io/rioxarray/stable/getting_started/getting_started.html\n",
       "  data = xr.open_rasterio(fp).squeeze(\"band\", drop=True).to_dataset(name=\"elevation\")\n"
      ]
     }
@@ -253,7 +253,6 @@
     "data = xr.open_rasterio(fp).squeeze(\"band\", drop=True).to_dataset(name=\"elevation\")\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "# Explore the data and find out (using programming) what is:\n",
     "# the maximum \"elevation\" value in the data?\n",
     "print(data.max())\n",
     "\n",
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43211795",
+   "id": "70b85181",
    "metadata": {},
    "source": [
     "### Task 1.2 - Visualize the data\n",
@@ -287,8 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0167f752",
+   "execution_count": 68,
+   "id": "87b5f746",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -303,15 +302,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'elevation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_128/1445708261.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattribute\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0melevation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontours\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'elevation' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "plot_layer(dataset=data, attribute=elevation, contours=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8afc8a2",
+   "id": "8e53f631",
    "metadata": {},
    "source": [
     "## Problem 2 - Calculate Slope and Aspect + visualize (6 points)\n",
@@ -331,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8788b55",
+   "id": "4f837822",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -354,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a407fb77",
+   "id": "633c5cc3",
    "metadata": {},
    "source": [
     "### Task 2.2 - Aspect\n",
@@ -375,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363a6923",
+   "id": "5d5be9cc",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -398,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b954ca4",
+   "id": "522f6e2b",
    "metadata": {},
    "source": [
     "## Problem 3 - Reclassify and weight the values (6 points)\n",
@@ -424,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7c4abf",
+   "id": "a1c64184",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed6c21f",
+   "id": "b3d78d2b",
    "metadata": {},
    "source": [
     "### Step 3.2 - Classify the slope using Natural Breaks + modify the values with own criteria\n",
@@ -478,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674125d3",
+   "id": "564a52af",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -520,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e516ee",
+   "id": "5a0cb7a9",
    "metadata": {},
    "source": [
     "### Step 3.3 - Classify the aspect to custom classes using `reclassify`\n",
@@ -538,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd21888",
+   "id": "abfaf5c5",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -574,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c61523be",
+   "id": "dd33d5ea",
    "metadata": {},
    "source": [
     "## Problem 3 - Local map algebra (2 points)\n",
@@ -599,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7063eba",
+   "id": "b3f09ac6",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -622,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b589787a",
+   "id": "3d0dcc07",
    "metadata": {},
    "source": [
     "## Problem 4 - Smooth the surface with focal map algebra (2 points)\n",
@@ -646,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f92a0941",
+   "id": "11cd8de2",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -681,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135c332d",
+   "id": "502ce892",
    "metadata": {},
    "source": [
     "## Problem 5 - How long did it take? Optional feedback (1 point)\n",
