--- a/Exercise-4.ipynb
+++ b/Exercise-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c882fe9e",
+   "id": "a9875fac",
    "metadata": {},
    "source": [
     "# Exercise 4\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccfc26b",
+   "id": "14ac3766",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15c0583c",
+   "id": "0d6d48ae",
    "metadata": {},
    "source": [
     "## Helper functions\n",
@@ -63,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "8cd2199f",
+   "execution_count": 1,
+   "id": "9842e449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43d3cc4",
+   "id": "55152e2c",
    "metadata": {},
    "source": [
     "## Problem 1 - Data exploration (3 points) \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4262c8cb",
+   "id": "06aecb27",
    "metadata": {},
    "source": [
     "### Task 1.1 - Read the data, explore the `xarray.Dataset` object \n",
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "1d1fa8d7",
+   "execution_count": null,
+   "id": "69204411",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -212,34 +212,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<xarray.Dataset>\n",
-      "Dimensions:    ()\n",
-      "Data variables:\n",
-      "    elevation  uint16 2294\n",
-      "<xarray.Dataset>\n",
-      "Dimensions:    ()\n",
-      "Data variables:\n",
-      "    elevation  uint16 1342\n",
-      "<xarray.Dataset>\n",
-      "Dimensions:    ()\n",
-      "Data variables:\n",
-      "    elevation  float64 1.663e+03\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_128/3157749704.py:10: DeprecationWarning: open_rasterio is Deprecated in favor of rioxarray. For information about transitioning, see: https://corteva.github.io/rioxarray/stable/getting_started/getting_started.html\n",
-      "  data = xr.open_rasterio(fp).squeeze(\"band\", drop=True).to_dataset(name=\"elevation\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import xrspatial as xs\n",
@@ -265,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b85181",
+   "id": "809b6a0a",
    "metadata": {},
    "source": [
     "### Task 1.2 - Visualize the data\n",
@@ -286,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "87b5f746",
+   "execution_count": null,
+   "id": "1c8d4c5c",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -302,27 +275,18 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'elevation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_128/1445708261.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattribute\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0melevation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontours\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'elevation' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "plot_layer(dataset=data, attribute=elevation, contours=True)"
+    "\n",
+    "plot_layer(dataset=data, attribute='elevation', contours=True)\n",
+    "\n",
+    "plot_hillshade(dataset=data, elevation_col='elevation')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e53f631",
+   "id": "f961fd67",
    "metadata": {},
    "source": [
     "## Problem 2 - Calculate Slope and Aspect + visualize (6 points)\n",
@@ -342,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f837822",
+   "id": "c4dddf50",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -360,12 +324,16 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# Calculate the slope using the .slope() -function available in xarray-spatial library and store the result in attribute \"slope\"\n",
+    "data[\"slope\"] = xs.slope(data[\"elevation\"])\n",
+    "\n",
+    "# Plot the result (i.e. slope) using the .plot() -function. Use colormap \"Greens\". As a result you should get something like below (the title Slope (degrees) is optional):\n",
+    "data[\"slope\"].plot(cmap='Greens')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "633c5cc3",
+   "id": "7cecb3d9",
    "metadata": {},
    "source": [
     "### Task 2.2 - Aspect\n",
@@ -386,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d5be9cc",
+   "id": "fbb86891",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -409,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "522f6e2b",
+   "id": "34311428",
    "metadata": {},
    "source": [
     "## Problem 3 - Reclassify and weight the values (6 points)\n",
@@ -435,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c64184",
+   "id": "cb834f97",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -464,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d78d2b",
+   "id": "becefb1c",
    "metadata": {},
    "source": [
     "### Step 3.2 - Classify the slope using Natural Breaks + modify the values with own criteria\n",
@@ -489,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564a52af",
+   "id": "531db3d3",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -531,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0cb7a9",
+   "id": "9a570d32",
    "metadata": {},
    "source": [
     "### Step 3.3 - Classify the aspect to custom classes using `reclassify`\n",
@@ -549,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abfaf5c5",
+   "id": "c6c2bbc7",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -585,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd33d5ea",
+   "id": "4d226285",
    "metadata": {},
    "source": [
     "## Problem 3 - Local map algebra (2 points)\n",
@@ -610,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3f09ac6",
+   "id": "2b98b5f2",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -633,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d0dcc07",
+   "id": "a9e28e4e",
    "metadata": {},
    "source": [
     "## Problem 4 - Smooth the surface with focal map algebra (2 points)\n",
@@ -657,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11cd8de2",
+   "id": "d296693b",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -692,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502ce892",
+   "id": "119a3368",
    "metadata": {},
    "source": [
     "## Problem 5 - How long did it take? Optional feedback (1 point)\n",
