--- a/Exercise-4.ipynb
+++ b/Exercise-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56e5b906",
+   "id": "bcc4dd70",
    "metadata": {},
    "source": [
     "# Exercise 4\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd4f0d51",
+   "id": "3461cce7",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2276923a",
+   "id": "7f77c982",
    "metadata": {},
    "source": [
     "## Helper functions\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fc5f434c",
+   "id": "75100ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d93d935",
+   "id": "84057752",
    "metadata": {},
    "source": [
     "## Problem 1 - Data exploration (3 points) \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed371809",
+   "id": "bfe10ab6",
    "metadata": {},
    "source": [
     "### Task 1.1 - Read the data, explore the `xarray.Dataset` object \n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fad3581f",
+   "id": "8e486dba",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f20176",
+   "id": "e308af42",
    "metadata": {},
    "source": [
     "### Task 1.2 - Visualize the data\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eabeddb3",
+   "id": "00753c2d",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd7c923",
+   "id": "f54b96d7",
    "metadata": {},
    "source": [
     "## Problem 2 - Calculate Slope and Aspect + visualize (6 points)\n",
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "18d653ff",
+   "id": "3da439ea",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03477905",
+   "id": "956e6e30",
    "metadata": {},
    "source": [
     "### Task 2.2 - Aspect\n",
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eccc67fe",
+   "id": "97379c82",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dcab832",
+   "id": "3f4c7da2",
    "metadata": {},
    "source": [
     "## Problem 3 - Reclassify and weight the values (6 points)\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f9624c90",
+   "id": "d82f2326",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e69886f",
+   "id": "6c87d5ee",
    "metadata": {},
    "source": [
     "### Step 3.2 - Classify the slope using Natural Breaks + modify the values with own criteria\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8cd776c6",
+   "id": "d8a98b8d",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a27d4a7",
+   "id": "53a59e5e",
    "metadata": {},
    "source": [
     "### Step 3.3 - Classify the aspect to custom classes using `reclassify`\n",
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e5dd023d",
+   "id": "427a307b",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3814c844",
+   "id": "734921e7",
    "metadata": {},
    "source": [
     "## Problem 4 - Local map algebra (2 points)\n",
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e09f6018",
+   "id": "772e900e",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -839,13 +839,13 @@
     "# Calculate a suitability index based on the formula provided above by utilizing the elevation_points, slope_points and aspect_points. Store the result in \"suitability_index\" attribute.\n",
     "data[\"suitability_index\"] = data[\"elevation_points\"]*0.2 + data[\"aspect_points\"]*0.6 + data[\"slope_points\"]*0.2\n",
     "\n",
-    "# Plot the result (i.e. suitability_index) using the .plot() -function.\n",
+    "# Plot the result (i.e. suitability_index) using the .plot() -function\n",
     "data[\"suitability_index\"].plot(cmap=\"RdYlBu_r\", size=10)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "abc61d95",
+   "id": "894b2843",
    "metadata": {},
    "source": [
     "## Problem 5 - Smooth the surface with focal map algebra (2 points)\n",
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "935fc147",
+   "id": "3a881ab3",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9cc0c18",
+   "id": "b8f2d1b1",
    "metadata": {},
    "source": [
     "## Problem 6 - How long did it take? Optional feedback (1 point)\n",
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6338c8f1",
+   "id": "3cac34f9",
    "metadata": {},
    "outputs": [],
    "source": []
