small tweaks on the tasks, all problems ready

--- a/Exercise-4.ipynb
+++ b/Exercise-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ccb5666c",
+   "id": "5a7bf3c9",
    "metadata": {},
    "source": [
     "# Exercise 4\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc498e80",
+   "id": "c2f10fc0",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e56b66",
+   "id": "3bd10921",
    "metadata": {},
    "source": [
     "## Helper functions\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "57ef238d",
+   "id": "606d3420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f88502b",
+   "id": "ca96925b",
    "metadata": {},
    "source": [
     "## Problem 1 - Data exploration (3 points) \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74bafa4e",
+   "id": "40bfdb2b",
    "metadata": {},
    "source": [
     "### Task 1.1 - Read the data, explore the `xarray.Dataset` object \n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "55e07f3e",
+   "id": "eb3944d2",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -217,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_140/3157749704.py:10: DeprecationWarning: open_rasterio is Deprecated in favor of rioxarray. For information about transitioning, see: https://corteva.github.io/rioxarray/stable/getting_started/getting_started.html\n",
+      "/tmp/ipykernel_237/3157749704.py:10: DeprecationWarning: open_rasterio is Deprecated in favor of rioxarray. For information about transitioning, see: https://corteva.github.io/rioxarray/stable/getting_started/getting_started.html\n",
       "  data = xr.open_rasterio(fp).squeeze(\"band\", drop=True).to_dataset(name=\"elevation\")\n"
      ]
     },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff93a01",
+   "id": "d739c70a",
    "metadata": {},
    "source": [
     "### Task 1.2 - Visualize the data\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6b493760",
+   "id": "aad11d3f",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a35ddda",
+   "id": "f4c4c987",
    "metadata": {},
    "source": [
     "## Problem 2 - Calculate Slope and Aspect + visualize (6 points)\n",
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2ad9ab36",
+   "id": "48b5cbc8",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -396,7 +396,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3e1901f250>"
+       "<matplotlib.collections.QuadMesh at 0x7fe214c1b130>"
       ]
      },
      "execution_count": 4,
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8be1bb2",
+   "id": "0363e6e6",
    "metadata": {},
    "source": [
     "### Task 2.2 - Aspect\n",
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e61263e",
+   "id": "75cdc6bb",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -467,7 +467,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3e1a1e0d60>"
+       "<matplotlib.collections.QuadMesh at 0x7fe214240df0>"
       ]
      },
      "execution_count": 5,
@@ -494,17 +494,16 @@
     "data[\"aspect\"] = xs.aspect(data[\"elevation\"])\n",
     "\n",
     "# Filter out -1 values which represent cells that are flat (hence they do not have aspect):\n",
-    "# Update the \"aspect\" attribute using .where() function that allows masking the data based on user-defined criteria.\n",
     "data[\"aspect\"] = data[\"aspect\"].where(data[\"aspect\"]!=-1)\n",
     "\n",
-    "# TODO Plot the result (i.e. slope) using the .plot() -function. Use colormap \"jet\". As a result you should get something like below (the title Aspect ... is optional):\n",
+    "# Plot the result (i.e. slope) using the .plot() -function.\n",
     "data[\"aspect\"].plot(cmap=\"jet\", size=10)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3521eeb4",
+   "id": "750d5ba8",
    "metadata": {},
    "source": [
     "## Problem 3 - Reclassify and weight the values (6 points)\n",
@@ -530,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "75f73a9a",
+   "id": "f58d6b7e",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -549,7 +548,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3dfab30eb0>"
+       "<matplotlib.collections.QuadMesh at 0x7fe1f655a970>"
       ]
      },
      "execution_count": 6,
@@ -593,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a0c79a",
+   "id": "9e3c9889",
    "metadata": {},
    "source": [
     "### Step 3.2 - Classify the slope using Natural Breaks + modify the values with own criteria\n",
@@ -618,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e7315357",
+   "id": "b05e4566",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -637,7 +636,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3dfafbda00>"
+       "<matplotlib.collections.QuadMesh at 0x7fe1f606fca0>"
       ]
      },
      "execution_count": 7,
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f115324c",
+   "id": "9442803b",
    "metadata": {},
    "source": [
     "### Step 3.3 - Classify the aspect to custom classes using `reclassify`\n",
@@ -709,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bffc4157",
+   "id": "062857a4",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -728,7 +727,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3e1822bdf0>"
+       "<matplotlib.collections.QuadMesh at 0x7fe1f620b130>"
       ]
      },
      "execution_count": 8,
@@ -769,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f839c30",
+   "id": "66bf7fca",
    "metadata": {},
    "source": [
     "## Problem 4 - Local map algebra (2 points)\n",
@@ -794,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e60180b2",
+   "id": "9a72ccb6",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -813,7 +812,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3e18218040>"
+       "<matplotlib.collections.QuadMesh at 0x7fe1f664fe50>"
       ]
      },
      "execution_count": 9,
@@ -845,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0b71c9",
+   "id": "fe2d495e",
    "metadata": {},
    "source": [
     "## Problem 5 - Smooth the surface with focal map algebra (2 points)\n",
@@ -868,8 +867,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "128df367",
+   "execution_count": 10,
+   "id": "cdd8e842",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -888,10 +887,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f3dfaae09a0>"
+       "<matplotlib.collections.QuadMesh at 0x7fe2140413a0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -928,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42173c8",
+   "id": "4d005954",
    "metadata": {},
    "source": [
     "## Problem 6 - How long did it take? Optional feedback (1 point)\n",
@@ -939,13 +938,13 @@
     " \n",
     "In addition, if you would like to give any feedback about the exercise (optional), please provide it below:\n",
     "\n",
-    " - My feedback: This "
+    " - My feedback: Very pleasant exercise to complete since all the tasks were simple enough but not too easy. Real world data and application gave meaning to the exercise!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d42aa77",
+   "id": "a4546926",
    "metadata": {},
    "outputs": [],
    "source": []
