Add grading + feedback

--- a/Exercise-4.ipynb
+++ b/Exercise-4.ipynb
@@ -254,6 +254,8 @@
     "\n",
     "# YOUR CODE HERE\n",
     "# the maximum \"elevation\" value in the data?\n",
+    "\n",
+    "# HT: Below produces maximum of all attributes in the data, not only \"elevation\" which was the task. Correct answer would be --> data[\"elevation\"].max()\n",
     "print(data.max())\n",
     "\n",
     "# the minimum elevation value in the data?\n",
